--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2.3\n",
+      "{\n",
+      "  \"Compilers\": {\n",
+      "    \"c\": {\n",
+      "      \"name\": \"msvc\",\n",
+      "      \"linker\": \"link\",\n",
+      "      \"version\": \"19.29.30158\",\n",
+      "      \"commands\": \"cl\"\n",
+      "    },\n",
+      "    \"cython\": {\n",
+      "      \"name\": \"cython\",\n",
+      "      \"linker\": \"cython\",\n",
+      "      \"version\": \"3.0.12\",\n",
+      "      \"commands\": \"cython\"\n",
+      "    },\n",
+      "    \"c++\": {\n",
+      "      \"name\": \"msvc\",\n",
+      "      \"linker\": \"link\",\n",
+      "      \"version\": \"19.29.30158\",\n",
+      "      \"commands\": \"cl\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Machine Information\": {\n",
+      "    \"host\": {\n",
+      "      \"cpu\": \"x86_64\",\n",
+      "      \"family\": \"x86_64\",\n",
+      "      \"endian\": \"little\",\n",
+      "      \"system\": \"windows\"\n",
+      "    },\n",
+      "    \"build\": {\n",
+      "      \"cpu\": \"x86_64\",\n",
+      "      \"family\": \"x86_64\",\n",
+      "      \"endian\": \"little\",\n",
+      "      \"system\": \"windows\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Build Dependencies\": {\n",
+      "    \"blas\": {\n",
+      "      \"name\": \"scipy-openblas\",\n",
+      "      \"found\": true,\n",
+      "      \"version\": \"0.3.28\",\n",
+      "      \"detection method\": \"pkgconfig\",\n",
+      "      \"include directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\",\n",
+      "      \"lib directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\",\n",
+      "      \"openblas configuration\": \"OpenBLAS 0.3.28  USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell MAX_THREADS=24\",\n",
+      "      \"pc file directory\": \"D:/a/numpy/numpy/.openblas\"\n",
+      "    },\n",
+      "    \"lapack\": {\n",
+      "      \"name\": \"scipy-openblas\",\n",
+      "      \"found\": true,\n",
+      "      \"version\": \"0.3.28\",\n",
+      "      \"detection method\": \"pkgconfig\",\n",
+      "      \"include directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\",\n",
+      "      \"lib directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\",\n",
+      "      \"openblas configuration\": \"OpenBLAS 0.3.28  USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell MAX_THREADS=24\",\n",
+      "      \"pc file directory\": \"D:/a/numpy/numpy/.openblas\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Python Information\": {\n",
+      "    \"path\": \"C:\\\\Users\\\\runneradmin\\\\AppData\\\\Local\\\\Temp\\\\build-env-k51dk6fd\\\\Scripts\\\\python.exe\",\n",
+      "    \"version\": \"3.11\"\n",
+      "  },\n",
+      "  \"SIMD Extensions\": {\n",
+      "    \"baseline\": [\n",
+      "      \"SSE\",\n",
+      "      \"SSE2\",\n",
+      "      \"SSE3\"\n",
+      "    ],\n",
+      "    \"found\": [\n",
+      "      \"SSSE3\",\n",
+      "      \"SSE41\",\n",
+      "      \"POPCNT\",\n",
+      "      \"SSE42\",\n",
+      "      \"AVX\",\n",
+      "      \"F16C\",\n",
+      "      \"FMA3\",\n",
+      "      \"AVX2\"\n",
+      "    ],\n",
+      "    \"not found\": [\n",
+      "      \"AVX512F\",\n",
+      "      \"AVX512CD\",\n",
+      "      \"AVX512_SKX\",\n",
+      "      \"AVX512_CLX\",\n",
+      "      \"AVX512_CNL\",\n",
+      "      \"AVX512_ICL\"\n",
+      "    ]\n",
+      "  }\n",
+      "}\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "print(np.__version__)\n",
+    "print(np.show_config())"
    ]
   },
   {
@@ -51,11 +151,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.random((2,3,5))\n"
    ]
   },
   {
@@ -68,11 +169,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.28883863 0.65662772 0.39839219 0.79909239 0.17290952]\n",
+      "  [0.67344714 0.86714866 0.34189354 0.52162888 0.29716684]\n",
+      "  [0.59825453 0.80869038 0.18134915 0.92014898 0.46827587]]\n",
+      "\n",
+      " [[0.56661524 0.02949106 0.11699283 0.81892342 0.71045186]\n",
+      "  [0.59727728 0.55471504 0.84102424 0.66215483 0.39429196]\n",
+      "  [0.73550306 0.56388317 0.35458813 0.05344871 0.22542744]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +201,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b=np.ones((5,2,3))"
    ]
   },
   {
@@ -102,11 +219,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +258,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "are_they_eq= a.size == b.size\n",
+    "print(are_they_eq)"
    ]
   },
   {
@@ -136,11 +285,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "### they are in a different shape "
    ]
   },
   {
@@ -154,11 +304,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 5)\n",
+      "(2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "#c = b.(a, (-1, 0, -2))\n",
+    "c=np.transpose(b,(1,2,0))\n",
+    "\n",
+    "print(a.shape)\n",
+    "print(c.shape)"
    ]
   },
   {
@@ -171,11 +335,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d=np.add(a,c)\n"
    ]
   },
   {
@@ -188,12 +353,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.28883863 0.65662772 0.39839219 0.79909239 0.17290952]\n",
+      "  [0.67344714 0.86714866 0.34189354 0.52162888 0.29716684]\n",
+      "  [0.59825453 0.80869038 0.18134915 0.92014898 0.46827587]]\n",
+      "\n",
+      " [[0.56661524 0.02949106 0.11699283 0.81892342 0.71045186]\n",
+      "  [0.59727728 0.55471504 0.84102424 0.66215483 0.39429196]\n",
+      "  [0.73550306 0.56388317 0.35458813 0.05344871 0.22542744]]]\n",
+      "[[[1.28883863 1.65662772 1.39839219 1.79909239 1.17290952]\n",
+      "  [1.67344714 1.86714866 1.34189354 1.52162888 1.29716684]\n",
+      "  [1.59825453 1.80869038 1.18134915 1.92014898 1.46827587]]\n",
+      "\n",
+      " [[1.56661524 1.02949106 1.11699283 1.81892342 1.71045186]\n",
+      "  [1.59727728 1.55471504 1.84102424 1.66215483 1.39429196]\n",
+      "  [1.73550306 1.56388317 1.35458813 1.05344871 1.22542744]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "print(a)\n",
+    "\n",
+    "\n",
+    "print(d)\n",
+    "### d is more than a nt 1 in every value\n"
    ]
   },
   {
@@ -206,11 +397,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e=np.multiply(a,c)"
    ]
   },
   {
@@ -224,12 +416,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "are_they_eq= e.size == a.size\n"
    ]
   },
   {
@@ -238,17 +430,20 @@
    "source": [
     "\n",
     "\n",
-    "### 14. Identify the max, min, and mean values in d. Assign those values to variables \"d_max\", \"d_min\", and \"d_mean\"\n"
+    "### 14. Identify the max, min, and mean values in d. Assign those values to variables \"d_max\", \"d_max\", and \"d_mean\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "d_max=np.max(d)\n",
+    "d_min=np.min(d)\n",
+    "d_mean=np.mean(d)"
    ]
   },
   {
@@ -261,11 +456,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f=np.empty_like(d)"
    ]
   },
   {
@@ -287,11 +483,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "for i in range(d.shape[0]): \n",
+    "    for j in range(d.shape[1]):\n",
+    "         for k in range(d.shape[2]): \n",
+    "             value = d[i, j, k] \n",
+    "             if value == d_min: \n",
+    "                f[i, j, k] = 0 \n",
+    "             elif value == d_max: \n",
+    "                f[i, j, k] = 100 \n",
+    "             elif value == d_mean:\n",
+    "                f[i, j, k] = 50 \n",
+    "             elif d_min < value < d_mean:\n",
+    "               f[i, j, k] = 25\n",
+    "             if d_mean < value < d_max:\n",
+    "               f[i, j, k] = 75\n"
    ]
   },
   {
@@ -325,11 +535,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.28883863 1.65662772 1.39839219 1.79909239 1.17290952]\n",
+      "  [1.67344714 1.86714866 1.34189354 1.52162888 1.29716684]\n",
+      "  [1.59825453 1.80869038 1.18134915 1.92014898 1.46827587]]\n",
+      "\n",
+      " [[1.56661524 1.02949106 1.11699283 1.81892342 1.71045186]\n",
+      "  [1.59727728 1.55471504 1.84102424 1.66215483 1.39429196]\n",
+      "  [1.73550306 1.56388317 1.35458813 1.05344871 1.22542744]]]\n",
+      "[[[ 25.  75.  25.  75.  25.]\n",
+      "  [ 75.  75.  25.  75.  25.]\n",
+      "  [ 75.  75.  25. 100.  25.]]\n",
+      "\n",
+      " [[ 75.   0.  25.  75.  75.]\n",
+      "  [ 75.  75.  75.  75.  25.]\n",
+      "  [ 75.  75.  25.  25.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(d)\n",
+    "\n",
+    "\n",
+    "print(f)"
    ]
   },
   {
@@ -350,11 +585,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]"
+    "\n"
    ]
   }
  ],
@@ -374,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
