--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "<module 'numpy.version' from 'c:\\\\Users\\\\STARS\\\\anaconda3\\\\Lib\\\\site-packages\\\\numpy\\\\version.py'>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,12 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "a = np.array([2,3,5])\n",
-    "x = np.random.randint(3,size=(2,3,5))"
+    "a = np.random.randint(3,size=(2,3,5))"
    ]
   },
   {
@@ -80,24 +80,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[[2, 0, 1, 0, 0],\n",
-       "        [0, 2, 2, 2, 0],\n",
-       "        [2, 1, 0, 2, 1]],\n",
-       "\n",
-       "       [[2, 1, 2, 2, 2],\n",
-       "        [1, 1, 2, 1, 1],\n",
-       "        [2, 1, 2, 2, 0]]])"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m a\n\u001b[1;32m----> 2\u001b[0m x\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
     }
    ],
    "source": [
@@ -115,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -198,36 +193,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[3., 4., 6.],\n",
-       "        [3., 4., 6.]],\n",
+       "array([[[2, 2, 2, 1, 0],\n",
+       "        [2, 1, 2, 1, 0],\n",
+       "        [0, 3, 3, 2, 2]],\n",
        "\n",
-       "       [[3., 4., 6.],\n",
-       "        [3., 4., 6.]],\n",
-       "\n",
-       "       [[3., 4., 6.],\n",
-       "        [3., 4., 6.]],\n",
-       "\n",
-       "       [[3., 4., 6.],\n",
-       "        [3., 4., 6.]],\n",
-       "\n",
-       "       [[3., 4., 6.],\n",
-       "        [3., 4., 6.]]])"
+       "       [[2, 4, 3, 4, 3],\n",
+       "        [1, 1, 2, 4, 3],\n",
+       "        [1, 1, 4, 1, 2]]])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = a + b\n",
-    "result"
+    "result = a + x\n",
+    "result\n"
    ]
   },
   {
@@ -241,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -281,23 +269,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (3,) (2,3,5) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[81], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m d \u001b[38;5;241m=\u001b[39m a \u001b[38;5;241m+\u001b[39m c\n",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,) (2,3,5) "
-     ]
+     "data": {
+      "text/plain": [
+       "array([[[1., 3., 2., 1., 1.],\n",
+       "        [2., 2., 1., 2., 1.],\n",
+       "        [1., 3., 3., 2., 3.]],\n",
+       "\n",
+       "       [[1., 3., 2., 3., 2.],\n",
+       "        [2., 1., 3., 3., 2.],\n",
+       "        [1., 2., 3., 1., 1.]]])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = a + c "
+    "d = a + c \n",
+    "d\n"
    ]
   },
   {
@@ -314,19 +308,33 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[37], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(d)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'd' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 3. 2. 1. 1.]\n",
+      "  [2. 2. 1. 2. 1.]\n",
+      "  [1. 3. 3. 2. 3.]]\n",
+      "\n",
+      " [[1. 3. 2. 3. 2.]\n",
+      "  [2. 1. 3. 3. 2.]\n",
+      "  [1. 2. 3. 1. 1.]]]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 5)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(d)"
+    "print(d)\n",
+    "d.shape\n",
+    "a.shape"
    ]
   },
   {
@@ -341,9 +349,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0., 2., 1., 0., 0.],\n",
+       "        [1., 1., 0., 1., 0.],\n",
+       "        [0., 2., 2., 1., 2.]],\n",
+       "\n",
+       "       [[0., 2., 1., 2., 1.],\n",
+       "        [1., 0., 2., 2., 1.],\n",
+       "        [0., 1., 2., 0., 0.]]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "e= a*c\n",
+    "e"
    ]
   },
   {
@@ -359,10 +385,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "equle\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "if a.shape==c.shape:\n",
+    "    print (\"equle\")\n",
+    "else:\n",
+    "    print(\"not equle\")    \n"
    ]
   },
   {
@@ -378,10 +414,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "1.9333333333333333\n",
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "print(d_max)\n",
+    "print(d_mean)\n",
+    "print(d_min)"
    ]
   },
   {
@@ -396,9 +446,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1., 3., 2., 1., 1.],\n",
+       "        [2., 2., 1., 2., 1.],\n",
+       "        [1., 3., 3., 2., 3.]],\n",
+       "\n",
+       "       [[1., 3., 2., 3., 2.],\n",
+       "        [2., 1., 3., 3., 2.],\n",
+       "        [1., 2., 3., 1., 1.]]])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "f = np.empty(d.shape)\n",
+    "f\n"
    ]
   },
   {
@@ -424,7 +492,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "f[d == d_min] = 0\n",
+    "f[d == d_mean] = 50\n",
+    "f[(d > d_mean) & (d < d_max)] = 75\n",
+    "f[(d > d_min) & (d < d_mean)] = 25\n",
+    "f[d == d_max] = 100"
    ]
   },
   {
@@ -460,9 +532,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[  0., 100.,  75.,   0.,   0.],\n",
+       "        [ 75.,  75.,   0.,  75.,   0.],\n",
+       "        [  0., 100., 100.,  75., 100.]],\n",
+       "\n",
+       "       [[  0., 100.,  75., 100.,  75.],\n",
+       "        [ 75.,   0., 100., 100.,  75.],\n",
+       "        [  0.,  75., 100.,   0.,   0.]]])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "f"
    ]
   },
   {
