--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.22.3\n",
+      "openblas64__info:\n",
+      "    libraries = ['openblas64_', 'openblas64_']\n",
+      "    library_dirs = ['/usr/local/lib']\n",
+      "    language = c\n",
+      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None)]\n",
+      "    runtime_library_dirs = ['/usr/local/lib']\n",
+      "blas_ilp64_opt_info:\n",
+      "    libraries = ['openblas64_', 'openblas64_']\n",
+      "    library_dirs = ['/usr/local/lib']\n",
+      "    language = c\n",
+      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None)]\n",
+      "    runtime_library_dirs = ['/usr/local/lib']\n",
+      "openblas64__lapack_info:\n",
+      "    libraries = ['openblas64_', 'openblas64_']\n",
+      "    library_dirs = ['/usr/local/lib']\n",
+      "    language = c\n",
+      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None), ('HAVE_LAPACKE', None)]\n",
+      "    runtime_library_dirs = ['/usr/local/lib']\n",
+      "lapack_ilp64_opt_info:\n",
+      "    libraries = ['openblas64_', 'openblas64_']\n",
+      "    library_dirs = ['/usr/local/lib']\n",
+      "    language = c\n",
+      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None), ('HAVE_LAPACKE', None)]\n",
+      "    runtime_library_dirs = ['/usr/local/lib']\n",
+      "Supported SIMD extensions in this NumPy install:\n",
+      "    baseline = SSE,SSE2,SSE3\n",
+      "    found = SSSE3,SSE41,POPCNT,SSE42,AVX,F16C,FMA3,AVX2\n",
+      "    not found = AVX512F,AVX512CD,AVX512_KNL,AVX512_SKX,AVX512_CLX,AVX512_CNL,AVX512_ICL\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(np.__version__)\n",
+    "np.show_config()"
    ]
   },
   {
@@ -51,11 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "a = np.random.random((2, 3, 5)) # (rows, columns)\n",
+    "\n"
    ]
   },
   {
@@ -68,11 +110,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.70606964 0.79983415 0.22356572 0.38970704 0.15454135]\n",
+      "  [0.47282455 0.68474116 0.15042566 0.17698228 0.16093039]\n",
+      "  [0.24237236 0.78937361 0.56811368 0.36626594 0.17711339]]\n",
+      "\n",
+      " [[0.85002148 0.80765052 0.71904718 0.52005035 0.31753959]\n",
+      "  [0.76044134 0.62263205 0.26347973 0.63593497 0.34927783]\n",
+      "  [0.16761134 0.62298363 0.91189604 0.59003357 0.63220902]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +142,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5, 2, 3))"
    ]
   },
   {
@@ -102,11 +160,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +199,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a.shape==b.shape"
    ]
   },
   {
@@ -136,11 +228,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "it wont work because of their shapes\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "# c = np.add(a, b)\n",
+    "print(\"it wont work because of their shapes\")"
    ]
   },
   {
@@ -154,11 +256,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c=np.transpose(b, (1, 2, 0))\n",
+    "print(b)"
    ]
   },
   {
@@ -171,11 +296,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d = a + c"
    ]
   },
   {
@@ -190,10 +316,36 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.70606964 0.79983415 0.22356572 0.38970704 0.15454135]\n",
+      "  [0.47282455 0.68474116 0.15042566 0.17698228 0.16093039]\n",
+      "  [0.24237236 0.78937361 0.56811368 0.36626594 0.17711339]]\n",
+      "\n",
+      " [[0.85002148 0.80765052 0.71904718 0.52005035 0.31753959]\n",
+      "  [0.76044134 0.62263205 0.26347973 0.63593497 0.34927783]\n",
+      "  [0.16761134 0.62298363 0.91189604 0.59003357 0.63220902]]]\n",
+      "********************\n",
+      "[[[1.70606964 1.79983415 1.22356572 1.38970704 1.15454135]\n",
+      "  [1.47282455 1.68474116 1.15042566 1.17698228 1.16093039]\n",
+      "  [1.24237236 1.78937361 1.56811368 1.36626594 1.17711339]]\n",
+      "\n",
+      " [[1.85002148 1.80765052 1.71904718 1.52005035 1.31753959]\n",
+      "  [1.76044134 1.62263205 1.26347973 1.63593497 1.34927783]\n",
+      "  [1.16761134 1.62298363 1.91189604 1.59003357 1.63220902]]]\n",
+      "a and b has the same random values but the only diffrence that a is between 0 and 1(Probability) and b is one and the same (Probability)\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print(a)\n",
+    "print('********************')\n",
+    "print(d)\n",
+    "print(\"a and b has the same random values but the only diffrence that a is between 0 and 1(Probability) and b is one and the same (Probability)\")\n"
    ]
   },
   {
@@ -206,11 +358,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.70606964 0.79983415 0.22356572 0.38970704 0.15454135]\n",
+      "  [0.47282455 0.68474116 0.15042566 0.17698228 0.16093039]\n",
+      "  [0.24237236 0.78937361 0.56811368 0.36626594 0.17711339]]\n",
+      "\n",
+      " [[0.85002148 0.80765052 0.71904718 0.52005035 0.31753959]\n",
+      "  [0.76044134 0.62263205 0.26347973 0.63593497 0.34927783]\n",
+      "  [0.16761134 0.62298363 0.91189604 0.59003357 0.63220902]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e = a * c\n",
+    "print(e)"
    ]
   },
   {
@@ -224,11 +392,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The reason the result of multiplying arrays a and c is equal to the original array a (in the context of your previous operations) is due to the specific values in the array c that were created from the array b.\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
+    "a==e\n",
+    "print('The reason the result of multiplying arrays a and c is equal to the original array a (in the context of your previous operations) is due to the specific values in the array c that were created from the array b.')\n",
     "\n"
    ]
   },
@@ -243,12 +421,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n"
    ]
   },
   {
@@ -261,11 +441,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f=np.empty(d.shape)"
    ]
   },
   {
@@ -287,11 +468,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "for i in range(d.shape[0]): \n",
+    "    for j in range(d.shape[1]):  \n",
+    "        for k in range(d.shape[2]):  \n",
+    "            value = d[i][j][k]\n",
+    "            if value == d_min:\n",
+    "                f[i][j][k] = 0\n",
+    "            elif value == d_mean:\n",
+    "                f[i][j][k] = 50\n",
+    "            elif value == d_max:\n",
+    "                f[i][j][k] = 100\n",
+    "            elif d_min < value < d_mean:\n",
+    "                f[i][j][k] = 25\n",
+    "            elif d_mean < value < d_max:\n",
+    "                f[i][j][k] = 75\n"
    ]
   },
   {
@@ -325,11 +521,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.70606964 1.79983415 1.22356572 1.38970704 1.15454135]\n",
+      "  [1.47282455 1.68474116 1.15042566 1.17698228 1.16093039]\n",
+      "  [1.24237236 1.78937361 1.56811368 1.36626594 1.17711339]]\n",
+      "\n",
+      " [[1.85002148 1.80765052 1.71904718 1.52005035 1.31753959]\n",
+      "  [1.76044134 1.62263205 1.26347973 1.63593497 1.34927783]\n",
+      "  [1.16761134 1.62298363 1.91189604 1.59003357 1.63220902]]]\n",
+      "*************\n",
+      "[[[ 75.  75.  25.  25.  25.]\n",
+      "  [ 25.  75.   0.  25.  25.]\n",
+      "  [ 25.  75.  75.  25.  25.]]\n",
+      "\n",
+      " [[ 75.  75.  75.  75.  25.]\n",
+      "  [ 75.  75.  25.  75.  25.]\n",
+      "  [ 25.  75. 100.  75.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(d)\n",
+    "print('*************')\n",
+    "print(f)\n"
    ]
   },
   {
@@ -350,11 +571,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]"
+    "### [your code here]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
@@ -374,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
