--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -34,11 +35,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 161,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.23.5'"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "np.__version__"
    ]
   },
   {
@@ -51,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "a = np.random.randint(10,99 , size=(2,3,5))"
    ]
   },
   {
@@ -68,11 +80,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 163,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[39, 94, 38, 93, 13],\n",
+       "        [93, 14, 44, 41, 75],\n",
+       "        [49, 24, 77, 80, 35]],\n",
+       "\n",
+       "       [[51, 60, 36, 57, 81],\n",
+       "        [75, 38, 65, 83, 66],\n",
+       "        [26, 82, 56, 43, 40]]])"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "a\n"
    ]
   },
   {
@@ -85,11 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "b = np.ones([5,2,3])"
    ]
   },
   {
@@ -102,11 +131,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 165,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]]])"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "b"
    ]
   },
   {
@@ -119,11 +172,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "def check():\n",
+    "    if a.shape == b.shape:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "check()"
    ]
   },
   {
@@ -136,11 +205,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 167,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "That is Error becouse array not same dimensions   a = (2,3,5,)  b = (5,2,3,)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "try:   \n",
+    "    able = a + b\n",
+    "except:\n",
+    "    print('That is Error becouse array not same dimensions   a = (2,3,5,)  b = (5,2,3,)')"
    ]
   },
   {
@@ -154,11 +234,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "c = np.transpose(b,(1,2,0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 5)"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.shape"
    ]
   },
   {
@@ -171,11 +271,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 170,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[40., 95., 39., 94., 14.],\n",
+       "        [94., 15., 45., 42., 76.],\n",
+       "        [50., 25., 78., 81., 36.]],\n",
+       "\n",
+       "       [[52., 61., 37., 58., 82.],\n",
+       "        [76., 39., 66., 84., 67.],\n",
+       "        [27., 83., 57., 44., 41.]]])"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "d = a + c\n",
+    "d # becuse use transpose same dimensions"
    ]
   },
   {
@@ -188,12 +306,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 171,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[39 94 38 93 13]\n",
+      "  [93 14 44 41 75]\n",
+      "  [49 24 77 80 35]]\n",
+      "\n",
+      " [[51 60 36 57 81]\n",
+      "  [75 38 65 83 66]\n",
+      "  [26 82 56 43 40]]]\n",
+      "\n",
+      "\n",
+      "\n",
+      "[[[40. 95. 39. 94. 14.]\n",
+      "  [94. 15. 45. 42. 76.]\n",
+      "  [50. 25. 78. 81. 36.]]\n",
+      "\n",
+      " [[52. 61. 37. 58. 82.]\n",
+      "  [76. 39. 66. 84. 67.]\n",
+      "  [27. 83. 57. 44. 41.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "print(a)\n",
+    "print('\\n\\n')\n",
+    "print(d)\n",
+    "\n",
+    "\n",
+    "# becouce add 1 every element    "
    ]
   },
   {
@@ -206,11 +352,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 172,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[39., 94., 38., 93., 13.],\n",
+       "        [93., 14., 44., 41., 75.],\n",
+       "        [49., 24., 77., 80., 35.]],\n",
+       "\n",
+       "       [[51., 60., 36., 57., 81.],\n",
+       "        [75., 38., 65., 83., 66.],\n",
+       "        [26., 82., 56., 43., 40.]]])"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "e = a * c\n",
+    "e"
    ]
   },
   {
@@ -224,12 +388,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 173,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "if a.all() == e.all():\n",
+    "    print(\"True\")\n",
+    "else:\n",
+    "    print(\"False\")\n",
+    "\n",
+    "# because every number multiplied in 1 = result same number"
    ]
   },
   {
@@ -243,12 +419,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 174,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max number is 95.0\n",
+      "min number is 14.0\n",
+      "mean number is 56.6\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "d_max = d.max()\n",
+    "print(f\"max number is {d_max}\")\n",
+    "d_min = d.min()\n",
+    "print(f\"min number is {d_min}\")\n",
+    "d_mean = d.mean()\n",
+    "print(f\"mean number is {d_mean}\")\n"
    ]
   },
   {
@@ -261,11 +451,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 175,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[39., 94., 38., 93., 13.],\n",
+       "        [93., 14., 44., 41., 75.],\n",
+       "        [49., 24., 77., 80., 35.]],\n",
+       "\n",
+       "       [[51., 60., 36., 57., 81.],\n",
+       "        [75., 38., 65., 83., 66.],\n",
+       "        [26., 82., 56., 43., 40.]]])"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "f = np.empty([2,3,5])\n",
+    "f"
    ]
   },
   {
@@ -287,11 +495,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "for i in range(d.shape[0]):\n",
+    "    for j in range(d.shape[1]):\n",
+    "        for z in range(d.shape[2]):\n",
+    "            value = d[i][j][z]\n",
+    "            if value == d_max:\n",
+    "                f[i][j][z] = 100\n",
+    "            elif value == d_mean:\n",
+    "                f[i][j][z] = 50\n",
+    "            elif value == d_min:\n",
+    "                f[i][j][z] = 0\n",
+    "            elif value > d_min and value < d_mean:\n",
+    "                f[i][j][z] = 25\n",
+    "            else:\n",
+    "                f[i][j][z] = 75\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 25., 100.,  25.,  75.,   0.],\n",
+       "        [ 75.,  25.,  25.,  25.,  75.],\n",
+       "        [ 25.,  25.,  75.,  75.,  25.]],\n",
+       "\n",
+       "       [[ 25.,  75.,  25.,  75.,  75.],\n",
+       "        [ 75.,  25.,  75.,  75.,  75.],\n",
+       "        [ 25.,  75.,  75.,  25.,  25.]]])"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
    ]
   },
   {
@@ -325,11 +572,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 178,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arry d \n",
+      " [[[40. 95. 39. 94. 14.]\n",
+      "  [94. 15. 45. 42. 76.]\n",
+      "  [50. 25. 78. 81. 36.]]\n",
+      "\n",
+      " [[52. 61. 37. 58. 82.]\n",
+      "  [76. 39. 66. 84. 67.]\n",
+      "  [27. 83. 57. 44. 41.]]]\n",
+      "\n",
+      "Arry f \n",
+      " [[[ 25. 100.  25.  75.   0.]\n",
+      "  [ 75.  25.  25.  25.  75.]\n",
+      "  [ 25.  25.  75.  75.  25.]]\n",
+      "\n",
+      " [[ 25.  75.  25.  75.  75.]\n",
+      "  [ 75.  25.  75.  75.  75.]\n",
+      "  [ 25.  75.  75.  25.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(f'Arry d \\n {d}\\n')\n",
+    "print(f'Arry f \\n {f}')"
    ]
   },
   {
@@ -350,17 +622,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]"
+    "f_char = np.empty(f.shape, dtype=str)\n",
+    "\n",
+    "# تطبيق الشروط لتحويل القيم إلى حروف\n",
+    "f_char[f == 0] = \"A\"\n",
+    "f_char[f == 25] = \"B\"\n",
+    "f_char[f == 50] = \"C\"\n",
+    "f_char[f == 75] = \"D\"\n",
+    "f_char[f == 100] = \"E\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['B' 'E' 'B' 'D' 'A']\n",
+      "  ['D' 'B' 'B' 'B' 'D']\n",
+      "  ['B' 'B' 'D' 'D' 'B']]\n",
+      "\n",
+      " [['B' 'D' 'B' 'D' 'D']\n",
+      "  ['D' 'B' 'D' 'D' 'D']\n",
+      "  ['B' 'D' 'D' 'B' 'B']]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f_char)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml_project",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
