--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np\n",
+    "\n"
    ]
   },
   {
@@ -34,11 +36,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy Version:  1.23.5\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "\n",
+    "print(\"NumPy Version: \",np.version.version)\n"
    ]
   },
   {
@@ -51,11 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.rand(2,3,5)\n"
    ]
   },
   {
@@ -68,11 +82,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.47041945, 0.26701965, 0.69191172, 0.45322405, 0.8613023 ],\n",
+       "        [0.45738351, 0.05629229, 0.99060241, 0.46817383, 0.80825176],\n",
+       "        [0.17037358, 0.80930108, 0.69714712, 0.34917215, 0.58395127]],\n",
+       "\n",
+       "       [[0.0994892 , 0.76319404, 0.56291095, 0.9500218 , 0.53167461],\n",
+       "        [0.75589127, 0.96611062, 0.93105762, 0.21958591, 0.99406709],\n",
+       "        [0.17319947, 0.57736346, 0.47957232, 0.20456179, 0.01572689]]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a"
    ]
   },
   {
@@ -85,11 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5,2,3),)\n"
    ]
   },
   {
@@ -102,11 +135,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b"
    ]
   },
   {
@@ -119,11 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a.size == b.size)\n"
    ]
   },
   {
@@ -136,11 +203,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "##a_b = a+b\n",
+    "\n",
+    "# we cannot add them because they have different shapes \n",
+    "#operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
    ]
   },
   {
@@ -154,11 +225,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "c = np.transpose(b,(1,2,0))\n",
+    "c\n",
+    "print(c.shape)"
    ]
   },
   {
@@ -171,11 +254,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1.47041945, 1.26701965, 1.69191172, 1.45322405, 1.8613023 ],\n",
+       "        [1.45738351, 1.05629229, 1.99060241, 1.46817383, 1.80825176],\n",
+       "        [1.17037358, 1.80930108, 1.69714712, 1.34917215, 1.58395127]],\n",
+       "\n",
+       "       [[1.0994892 , 1.76319404, 1.56291095, 1.9500218 , 1.53167461],\n",
+       "        [1.75589127, 1.96611062, 1.93105762, 1.21958591, 1.99406709],\n",
+       "        [1.17319947, 1.57736346, 1.47957232, 1.20456179, 1.01572689]]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d =  a + c\n",
+    "d"
    ]
   },
   {
@@ -188,12 +290,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array a\n",
+      " [[[0.53132689 0.00423134 0.65010724 0.9867978  0.69092959]\n",
+      "  [0.08436287 0.61680177 0.06151468 0.15796471 0.18481078]\n",
+      "  [0.4583665  0.01628634 0.25347925 0.42785481 0.10516597]]\n",
+      "\n",
+      " [[0.93533328 0.28622853 0.24046432 0.29606169 0.14688571]\n",
+      "  [0.8992071  0.61416002 0.90631764 0.597661   0.65419718]\n",
+      "  [0.34086404 0.89240062 0.09047047 0.22998482 0.18157456]]]\n",
+      "array d \n",
+      " [[[1.53132689 1.00423134 1.65010724 1.9867978  1.69092959]\n",
+      "  [1.08436287 1.61680177 1.06151468 1.15796471 1.18481078]\n",
+      "  [1.4583665  1.01628634 1.25347925 1.42785481 1.10516597]]\n",
+      "\n",
+      " [[1.93533328 1.28622853 1.24046432 1.29606169 1.14688571]\n",
+      "  [1.8992071  1.61416002 1.90631764 1.597661   1.65419718]\n",
+      "  [1.34086404 1.89240062 1.09047047 1.22998482 1.18157456]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print('array a\\n' ,a)\n",
+    "\n",
+    "print('array d \\n' ,d)\n",
+    "# nothing change except it added one to every elements \n"
    ]
   },
   {
@@ -206,11 +334,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.47041945, 0.26701965, 0.69191172, 0.45322405, 0.8613023 ],\n",
+       "        [0.45738351, 0.05629229, 0.99060241, 0.46817383, 0.80825176],\n",
+       "        [0.17037358, 0.80930108, 0.69714712, 0.34917215, 0.58395127]],\n",
+       "\n",
+       "       [[0.0994892 , 0.76319404, 0.56291095, 0.9500218 , 0.53167461],\n",
+       "        [0.75589127, 0.96611062, 0.93105762, 0.21958591, 0.99406709],\n",
+       "        [0.17319947, 0.57736346, 0.47957232, 0.20456179, 0.01572689]]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e = a * c \n",
+    "e"
    ]
   },
   {
@@ -224,12 +371,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "# e is equal to a because we multiply each elements ia a by 1, so nothing change "
    ]
   },
   {
@@ -243,12 +391,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the max 1.9940670895809396\n",
+      "This is the min 1.0157268936925585\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "d_max = np.max(d)  \n",
+    "d_min = np.min(d)\n",
+    "print('This is the max', d_max)\n",
+    "print('This is the min' , d_min)"
    ]
   },
   {
@@ -261,11 +422,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.53132689 0.00423134 0.65010724 0.9867978  0.69092959]\n",
+      "  [0.08436287 0.61680177 0.06151468 0.15796471 0.18481078]\n",
+      "  [0.4583665  0.01628634 0.25347925 0.42785481 0.10516597]]\n",
+      "\n",
+      " [[0.93533328 0.28622853 0.24046432 0.29606169 0.14688571]\n",
+      "  [0.8992071  0.61416002 0.90631764 0.597661   0.65419718]\n",
+      "  [0.34086404 0.89240062 0.09047047 0.22998482 0.18157456]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "shape = (2,3,5)\n",
+    "f= np.empty(shape)\n",
+    "print(f)"
    ]
   },
   {
@@ -287,11 +465,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the mean 1.4180603831788086\n",
+      "This is the max 1.9867977975274058\n",
+      "This is the min 1.0042313386948716\n",
+      "[[[1.53132689 1.00423134 1.65010724 1.9867978  1.69092959]\n",
+      "  [1.08436287 1.61680177 1.06151468 1.15796471 1.18481078]\n",
+      "  [1.4583665  1.01628634 1.25347925 1.42785481 1.10516597]]\n",
+      "\n",
+      " [[1.93533328 1.28622853 1.24046432 1.29606169 1.14688571]\n",
+      "  [1.8992071  1.61416002 1.90631764 1.597661   1.65419718]\n",
+      "  [1.34086404 1.89240062 1.09047047 1.22998482 1.18157456]]]\n",
+      "[[[ 75.   0.  75. 100.  75.]\n",
+      "  [ 25.  75.  25.  25.  25.]\n",
+      "  [ 75.  25.  25.  75.  25.]]\n",
+      "\n",
+      " [[ 75.  25.  25.  25.  25.]\n",
+      "  [ 75.  75.  75.  75.  75.]\n",
+      "  [ 25.  75.  25.  25.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d_mean = np.mean(d)\n",
+    "\n",
+    "print('This is the mean', d_mean)\n",
+    "print('This is the max', d_max)\n",
+    "print('This is the min', d_min)\n",
+    "print(d)\n",
+    "for i in range(len(d)):\n",
+    "    for j in range(len(d[i])):\n",
+    "        for k in range(len(d[i][j])):\n",
+    "            value = d[i][j][k]\n",
+    "            if value == d_min:\n",
+    "                f[i][j][k] = 0\n",
+    "            elif value == d_mean:\n",
+    "                f[i][j][k] = 50\n",
+    "            elif value == d_max:\n",
+    "                f[i][j][k] = 100\n",
+    "            elif d_min < value < d_mean:\n",
+    "                f[i][j][k] = 25\n",
+    "            elif d_mean < value < d_max:\n",
+    "                f[i][j][k] = 75\n",
+    "\n",
+    "print(f)   \n"
    ]
   },
   {
@@ -325,11 +549,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.53132689 1.00423134 1.65010724 1.9867978  1.69092959]\n",
+      "  [1.08436287 1.61680177 1.06151468 1.15796471 1.18481078]\n",
+      "  [1.4583665  1.01628634 1.25347925 1.42785481 1.10516597]]\n",
+      "\n",
+      " [[1.93533328 1.28622853 1.24046432 1.29606169 1.14688571]\n",
+      "  [1.8992071  1.61416002 1.90631764 1.597661   1.65419718]\n",
+      "  [1.34086404 1.89240062 1.09047047 1.22998482 1.18157456]]]\n",
+      "[[[ 75.   0.  75. 100.  75.]\n",
+      "  [ 25.  75.  25.  25.  25.]\n",
+      "  [ 75.  25.  25.  75.  25.]]\n",
+      "\n",
+      " [[ 75.  25.  25.  25.  25.]\n",
+      "  [ 75.  75.  75.  75.  75.]\n",
+      "  [ 25.  75.  25.  25.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print (d)\n",
+    "print (f)"
    ]
   },
   {
@@ -350,17 +597,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]"
+    "f_s = np.empty(d.shape , dtype=str)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[['D', 'A', 'D', 'E', 'D'],\n",
+       "        ['B', 'D', 'B', 'B', 'B'],\n",
+       "        ['D', 'B', 'B', 'D', 'B']],\n",
+       "\n",
+       "       [['D', 'B', 'B', 'B', 'B'],\n",
+       "        ['D', 'D', 'D', 'D', 'D'],\n",
+       "        ['B', 'D', 'B', 'B', 'B']]], dtype='<U1')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### [your code here]\n",
+    "f_s[f==0] = 'A'\n",
+    "f_s[f==25] = 'B'\n",
+    "f_s[f==50] = 'C'\n",
+    "f_s[f==75] = 'D'\n",
+    "f_s[f==100] = 'E'\n",
+    "\n",
+    "\n",
+    "f_s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
