--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -34,11 +35,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy Version: 1.23.5\n",
+      "blas_armpl_info:\n",
+      "  NOT AVAILABLE\n",
+      "blas_mkl_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/Admin/anaconda4\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/Admin/anaconda4\\\\Library\\\\include']\n",
+      "blas_opt_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/Admin/anaconda4\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/Admin/anaconda4\\\\Library\\\\include']\n",
+      "lapack_armpl_info:\n",
+      "  NOT AVAILABLE\n",
+      "lapack_mkl_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/Admin/anaconda4\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/Admin/anaconda4\\\\Library\\\\include']\n",
+      "lapack_opt_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/Admin/anaconda4\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/Admin/anaconda4\\\\Library\\\\include']\n",
+      "Supported SIMD extensions in this NumPy install:\n",
+      "    baseline = SSE,SSE2,SSE3\n",
+      "    found = SSSE3,SSE41,POPCNT,SSE42,AVX,F16C,FMA3,AVX2\n",
+      "    not found = AVX512F,AVX512CD,AVX512_SKX,AVX512_CLX,AVX512_CNL\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(\"NumPy Version:\", np.__version__)\n",
+    "np.show_config()\n"
    ]
   },
   {
@@ -51,11 +90,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a=np.random.randint(10, size=(2,3,5))\n"
    ]
   },
   {
@@ -68,11 +108,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[5 0 5 3 4]\n",
+      "  [7 2 8 0 7]\n",
+      "  [6 0 4 5 3]]\n",
+      "\n",
+      " [[9 5 4 0 9]\n",
+      "  [0 2 6 3 2]\n",
+      "  [5 3 5 2 0]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 5)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)\n",
+    "a.shape\n"
    ]
   },
   {
@@ -85,11 +151,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b=np.ones((5,2,3))\n"
    ]
   },
   {
@@ -102,11 +169,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(5, 2, 3)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)\n",
+    "b.shape\n"
    ]
   },
   {
@@ -119,11 +219,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 5)\n",
+      "(5, 2, 3)\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a.shape)\n",
+    "print(b.shape)\n",
+    "# no matrix a and b does not have the same size \n",
+    "same_size = a.shape == b.shape\n",
+    "print(same_size)\n",
+    "\n"
    ]
   },
   {
@@ -136,11 +252,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "can_add=a.shape==b.shape\n",
+    "print(can_add)\n",
+    "# no i am not able to add a and b because they have different sizes and it should be the same size of column in first matrix with the first row in the second matrix\n",
+    "\n"
    ]
   },
   {
@@ -154,11 +282,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 5)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c = b.transpose(1,2,0)\n",
+    "print(c)\n",
+    "c.shape\n"
    ]
   },
   {
@@ -171,11 +326,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d=a+c\n"
    ]
   },
   {
@@ -188,11 +344,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[5 0 5 3 4]\n",
+      "  [7 2 8 0 7]\n",
+      "  [6 0 4 5 3]]\n",
+      "\n",
+      " [[9 5 4 0 9]\n",
+      "  [0 2 6 3 2]\n",
+      "  [5 3 5 2 0]]]\n",
+      "[[[ 6.  1.  6.  4.  5.]\n",
+      "  [ 8.  3.  9.  1.  8.]\n",
+      "  [ 7.  1.  5.  6.  4.]]\n",
+      "\n",
+      " [[10.  6.  5.  1. 10.]\n",
+      "  [ 1.  3.  7.  4.  3.]\n",
+      "  [ 6.  4.  6.  3.  1.]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
+    "print(a)\n",
+    "print(d)\n",
+    "#\n",
     "\n"
    ]
   },
@@ -206,11 +386,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[5. 0. 5. 3. 4.]\n",
+      "  [7. 2. 8. 0. 7.]\n",
+      "  [6. 0. 4. 5. 3.]]\n",
+      "\n",
+      " [[9. 5. 4. 0. 9.]\n",
+      "  [0. 2. 6. 3. 2.]\n",
+      "  [5. 3. 5. 2. 0.]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 5)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e=a*c\n",
+    "print(e)\n",
+    "e.shape\n"
    ]
   },
   {
@@ -224,11 +431,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "(2, 3, 5)\n",
+      "(2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
+    "eq=a.shape==e.shape\n",
+    "print(eq)\n",
+    "print(e.shape)\n",
+    "print(a.shape)\n",
+    "# yes e equals to a they both have the same shape and size\n",
     "\n"
    ]
   },
@@ -243,11 +465,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "### [your code here]\n",
+    "d_max=np.max(d)\n",
+    "d_min=np.min(d)\n",
+    "d_mean=np.mean(d)\n",
     "\n"
    ]
   },
@@ -261,11 +486,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f=np.empty((2,3,5))\n"
    ]
   },
   {
@@ -287,11 +513,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f = np.empty(d.shape)\n",
+    "\n",
+    "for i in range(d.shape[0]):  \n",
+    "    for j in range(d.shape[1]):  \n",
+    "        for k in range(d.shape[2]):  \n",
+    "            if d_min < d[i, j, k] < d_mean:\n",
+    "                f[i, j, k] = 25\n",
+    "            elif d_mean < d[i, j, k] < d_max:\n",
+    "                f[i, j, k] = 75\n",
+    "            elif d[i,j,k]== d_max:\n",
+    "                f[i, j, k] = 100\n",
+    "            else:\n",
+    "                  f[i, j, k] = 0  \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -325,11 +570,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 6.  1.  6.  4.  5.]\n",
+      "  [ 8.  3.  9.  1.  8.]\n",
+      "  [ 7.  1.  5.  6.  4.]]\n",
+      "\n",
+      " [[10.  6.  5.  1. 10.]\n",
+      "  [ 1.  3.  7.  4.  3.]\n",
+      "  [ 6.  4.  6.  3.  1.]]]\n",
+      "[[[ 75.   0.  75.  25.  75.]\n",
+      "  [ 75.  25.  75.   0.  75.]\n",
+      "  [ 75.   0.  75.  75.  25.]]\n",
+      "\n",
+      " [[100.  75.  75.   0. 100.]\n",
+      "  [  0.  25.  75.  25.  25.]\n",
+      "  [ 75.  25.  75.  25.   0.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(d)\n",
+    "print(f)\n"
    ]
   },
   {
@@ -360,7 +628,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
